--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ main {
   margin: auto;
   display: grid;
   grid-template-columns: 250px 250px 250px auto;
-  grid-template-rows: 250px 250px;
-  background-color: black;
+  grid-template-rows: 265px 265px 220px;
+  background-color: rgba(0, 0, 0, 0.341);
 }
 
 #siteLogo {
@@ -75,7 +75,7 @@ ul {
 p {
   margin: 1rem;
   grid-column: 2/5;
-  grid-row: 2/3;
+  grid-row: 3/4;
 }
 
 /* -- button -- */
@@ -91,4 +91,19 @@ section + div {
 
 section + div:hover {
   cursor: pointer;
+}
+
+main + div {
+  border: solid black 5px;
+}
+
+.button {
+  grid-column: 1/2;
+  grid-row: 3/4
+}
+
+#chartDiv {
+  margin: 1rem;
+  grid-column: 2/5;
+  grid-row: 2/3;
 }
